# fortcov

./: .ci-refresh  .fortcov_execution_marker  .gitignore  AGENTS.md  API_REFERENCE.md  ARCHITECTURAL_DECOMPOSITION.md  ATOMIC_TEMP_FILE_GUIDE.md  BACKLOG.md  BUILD_SYSTEM_INTEGRATION_COMPLETE.md  CHANGELOG.md  CI_CD_MATRIX_GUIDE.md  CLAUDE.md  CLI_VALIDATION_REPORT.md  CLI_VALIDATION_STATUS.md  CMakeLists.txt  CONFIGURATION.md  COVERAGE_REPORTING_ARCHITECTURE.md  DESIGN.md  DIFF_IMPLEMENTATION_SUMMARY.md  DIFF_TEST_SUITE_SUMMARY.md  DOCUMENTATION.md  DONE_ARCHIVE.md  ENHANCED_CLI_GUIDE.md  EXAMPLES.md  FOUNDATION_LAYER_GUIDE.md  FPM_COVERAGE_WORKFLOW_FIX.md  IMPLEMENTATION_STRATEGY.md  INSTALLATION.md  INTEGRATION_TEST_FIXES.md  INVESTIGATION_263.md  INVESTIGATION_264.md  INVESTIGATION_266.md  ISSUE_430_RESOLUTION.md  LICENSE  MODULAR_ARCHITECTURE_GUIDE.md  Makefile  PERFORMANCE_PROFILE.md  PLAY_INFRASTRUCTURE_STATUS.md  PR_836_CORRECTIONS.md  QADS_COMPLIANCE_VERIFICATION.md  (+59 more)
.github/workflows/: ci.yml  e2e_pycobertura.yml  release.yml  system-diff-validation.yml
app/: compare_coverage_metrics.f90  main.f90
doc/: CLAUDE.md  coverage_workflow.md
doc/design/: DESIGN.md
doc/developer/: api-reference.md  architecture.md  build-integration.md  development-guide.md  exit-codes.md  release-process.md  testing.md
doc/implementation/: SYSTEM_TEST_DESIGN.md  THRESHOLD_DIFF_ALGORITHM.md  design-decisions.md  performance.md  security.md
doc/issues/: issue-001-coverage-model.md  issue-002-string-utils.md  issue-003-file-utils.md  issue-004-parser-abstraction.md  issue-005-gcov-binary-format.md  issue-006-gcov-parser.md  issue-008-reporter-abstraction.md  issue-010-config-module.md  issue-013-integration-tests.md  issue-014-fortran-specific.md
docs/: TESTING.md
examples/build_systems/cmake/basic_example/: CMakeLists.txt  generate_coverage.sh
examples/build_systems/cmake/basic_example/app/: main.f90
examples/build_systems/cmake/basic_example/src/: demo_math.f90
examples/build_systems/cmake/basic_example/test/: test_demo.f90
examples/build_systems/meson/basic_example/: meson.build  meson_options.txt  setup_and_test.sh  test_fixes.sh
examples/build_systems/meson/basic_example/app/: main.f90
examples/build_systems/meson/basic_example/scripts/: generate_coverage.sh.in
examples/build_systems/meson/basic_example/src/: demo_io.f90
examples/build_systems/meson/basic_example/test/: test_demo.f90
issues/: BACKLOG.md  issue-001-coverage-model.md  issue-002-string-utils.md  issue-003-file-utils.md  issue-004-parser-abstraction.md  issue-005-gcov-binary-format.md  issue-006-gcov-parser.md  issue-007-coverage-statistics.md  issue-008-reporter-abstraction.md  issue-009-markdown-reporter.md  issue-010-config-module.md  issue-011-coverage-engine.md  issue-012-cli-app.md  issue-013-integration-tests.md  issue-015-error-handling.md
scripts/: ci_hygiene_cleanup.sh  compare_coverage_metrics.py  e2e_validate_vs_pycobertura.sh  fpm_coverage_bridge.sh  fpm_coverage_workflow_fixed.sh  fpm_test_workaround.sh  test_performance_optimization.sh  validate_commands.sh  version_manager.sh
src/: architectural_core.f90  architectural_patterns.f90  atomic_temp_file_c_interface.f90  atomic_temp_file_core.f90  atomic_temp_file_error_handler.f90  atomic_temp_file_manager.f90  atomic_temp_file_manager_impl.f90  auto_discovery.f90  auto_discovery_utilities.f90  binary_file_io.f90  build_system_detector.f90  command_timeout_manager.f90  command_utils.f90  command_utils_core.f90  config_arg_classifier.f90  config_argument_classifier.f90  config_argument_detector.f90  config_command_parser.f90  config_defaults.f90  config_defaults_core.f90  config_detector_args.f90  config_file_handler.f90  config_file_parser.f90  config_flag_processor.f90  config_format_detector.f90  config_format_validators.f90  config_help.f90  config_help_core.f90  config_merger.f90  config_merger_impl.f90  config_namelist_parser.f90  config_parser.f90  config_parser_flags.f90  config_parser_utils.f90  config_storage.f90  config_types.f90  config_validation.f90  config_validation_core.f90  config_validator.f90  config_validators_impl.f90  (+166 more)
test/: ISSUE_304_TEST_IMPROVEMENTS_SUMMARY.md  README_CLI_TESTS.md  SECURITY_TESTS_README.md  minimal_gcov_test.f90  realistic_coverage_generator.f90  run_cli_flag_tests.sh  sprint2_test_utils.f90  test_architectural_separation_validation.f90  test_architecture_json_linecount_issue_879.f90  test_atomic_temp_file_manager.f90  test_atomic_temp_file_security.f90  test_auto_discovery_core_validation.f90  test_auto_discovery_end_to_end_validation.f90  test_auto_discovery_error_handling.f90  test_auto_discovery_integration_suite.f90  test_auto_discovery_mocks.f90  test_auto_discovery_project_scenarios.f90  test_auto_discovery_shared_utilities.f90  test_auto_discovery_workflows.f90  test_auto_test_enablement.f90  test_auto_test_flags_1251.f90  test_auto_test_integration.f90  test_automated_gcov_handling.f90  test_basic.f90  test_branch_coverage_accuracy_issue_304.f90  test_branch_coverage_math_fraud_fix_724.f90  test_bugfix_469.f90  test_build_cmake_coverage_command.f90  test_build_discovery.f90  test_build_system_detector.f90  test_build_system_discovery.f90  test_build_system_integration_patterns.f90  test_ci_cd_workflow_integration.f90  test_ci_matrix_coverage_defects.f90  test_cli.f90  test_cli_argument_parsing_core.f90  test_cli_argument_parsing_issue_228.f90  test_cli_auto_test_flags.f90  test_cli_basic_usage.f90  test_cli_behavioral_verification.f90  (+286 more)
test_behavioral/: baseline.json  coverage.md  test_exclude.f90
test_coverage_files/: test  test.f90
test_coverage_sample/: sample  sample.f90
test_data/: malformed_extreme_count.gcov  malformed_gcov_format.gcov  malformed_invalid_lines.gcov  malformed_negative_count.gcov  malformed_zero_lines.gcov  sample  sample.f90  truncated_data.gcov
test_integration/: .gitignore  README.md  compare_toolchains.py  diff_comparator.py  performance_benchmark.py  self_coverage_test.sh  simple_system_test.sh  system_diff_validation.sh  test_directory_workflow.sh
(+530 files in other folders)
